# ros-vision

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: follow.pc  vision.pc
devel/lib/python3/dist-packages/vision/msg/: __init__.py
devel/share/common-lisp/ros/vision/msg/: _package.lisp  vision-msg.asd
devel/share/follow/cmake/: followConfig.cmake
devel/share/gennodejs/ros/vision/msg/: _index.js
devel/share/roseus/ros/vision/: manifest.l
devel/share/vision/cmake/: vision-msg-extras.cmake  vision-msg-paths.cmake  visionConfig.cmake
src/follow/: CMakeLists.txt
src/follow/scripts/: PersonTracker.py
src/vision/: CMakeLists.txt
src/vision/scripts/ReID/: reid_model.py
